--- a/doc/0_Portada.tex
+++ b/doc/0_Portada.tex
@@ -12,8 +12,8 @@
   \vspace{15mm}
 
   \begin{spacing}{1.5} 
-    \textbf{\large \emph{Particle Swarm Optimization} para el ajuste de modelos
-      probabilísticos a datos del viento en Valparaíso}\\
+    \textbf{\large PARTICLE SWARM OPTIMIZATION PARA EL AJUSTE DE MODELOS
+      PROBABILÍSTICOS A DATOS DEL VIENTO EN VALPARAÍSO}\\
     %\textbf{\large asd}\\
   \end{spacing}
 
