--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -1,25 +1,25 @@
 @techreport{minenergia14,
     title={Energ{\'i}as Renovables en Chile. El potencial E{\'o}lico, Solar e Hidroel{\'e}ctrico de Arica a Chilo{\'e}},
-    author={Christian Santana O.},
+    author={Santana Christian O.},
     institution={MINENERGIA GIZ},
     year={2014},
     note= "Proyecto Estrategia de Expansi{\'o}n de las Energ{\'i}as Renovables en los Sistemas El{\'e}ctricos Interconectados"
 }
 @techreport{Aera15,
     title={Australian Energy Resource Assessment},
-    author={Carson L.},
+    author={Carson, L.},
     institution={Commonwealth of Australia - Geoscience Australia},
     year={2014},
     note= "Chapter 9 Wind Energy"
 }
 @article{Carneiro15,
-    author={Tatiane C. Carneiro, Sofia P. Melo, Paulo C. M. Carvalho, Arthur Pl{\'i}nio de S. Braga},
+    author="Carneiro, Tatiane C. and Melo, Sofia P. and Carvalho, Paulo C. M. and Braga, Arthur Pl{\'i}nio de S.",
     title={Particle Swarm Optimization method for estimation of Weibull parameters: A case study for the Brazilian northeast region},
     publisher={Elsevier Ltd},
     year={2015}
 }
 @article{Heckenbergerova15,
-    author={Jana Heckenbergerova, Petr Musilek, Pavel Krömer},
+    author={Heckenbergerova, Jana and Musilek, Petr and Kr\"{o}mer, Pavel},
     title={Optimization of Wind Direction Distribution Parameters Using Particle Swarm Optimization},
     publisher={Springer International Publishing},
     year={2015}
@@ -31,13 +31,13 @@
     year={2015}
 }
 @article{Kongnam15,
-    author={C. Kongnam, S. Nuchprayoon},
+    author={Kongnam, C. and Nuchprayoon, S.},
     title={A particle swarm optimization for wind energy control problem},
     publisher={Elsevier Ltd},
     year={2015}
 }
 @article{Psoexplain14,
-    author={A. Kaveh},
+    author={Kaveh, A.},
     title={Particle Swarm Optimization},
     publisher={Springer International Publishing},
     year={2014},
@@ -45,9 +45,22 @@
     note= "Chapter of Advances in Metaheuristic Algorithms for Optimal Design of Structures"
 }
 @conference{Kennedy95,
-    author={James Kennedy and Russell Eberhart},
+    author={Kennedy, James and Eberhart, Russell},
     title={Particle Swarm Optimization},
     booktitle={Proceedings of IEEE international conference on neural networks},
     year={1995},
     pages={1942 - 1948}
+}
+@article{Banerjee05,
+    author={Banerjee, Arindam and Dhillon, Inderjit S. and Ghosh, Joydeep and Sra, Suvrit},
+    title={Clustering on the Unit Hypersphere using von Mises-Fisher Distributions},
+    journal={Journal of Machine Learning Research},
+    editor={Ridgeway, Greg},
+    year={2005}
+}
+@article{Chang10,
+    author={Chang, Tian Pau},
+    title={Performance comparison of six numerical methods in estimating Weibull parameters for wind energy application},
+    publisher={Elsevier Ltd},
+    year={2010}
 }
