--- a/doc/memoria.tex
+++ b/doc/memoria.tex
@@ -67,10 +67,10 @@
 
 \input{1_Introduccion}
 \input{2_Preeliminares}
-\input{3_Desarrollo}
-\input{4_Analisis}
+%\input{3_Desarrollo}
+%\input{4_Analisis}
 
 \bibliographystyle{ieeetr}
-\bibliography{bibliography/bibliography}
+\bibliography{bibliography/images,bibliography/bibliography}
 
 \end{document}
