--- a/doc/2_Preeliminares.tex
+++ b/doc/2_Preeliminares.tex
@@ -4,21 +4,145 @@
 \section{Particle Swarm Optimization}
 Como se introduce en el artículo de Kaveh \cite{Psoexplain14}, el algoritmo \emph{Particle Swarm Optimization} es una metaheurística inspirada en el comportamiento social de poblaciones de enjambres. Este simula la conducta colectiva a través de partículas (soluciones) que se mueven dentro de un espacio de búsqueda mediante factores individuales y colectivos, que direccionan el movimiento a zonas de ``buena calidad'', determinadas por una función objetivo (\emph{fitness function}).\\
 Se dice enjambre a un conjunto de partículas en un espacio de búsqueda, cuya posición $x$ representa el vector solución, el cual varía dentro de dicho espacio a velocidad $v$. El modelo clásico presentado por Kennedy y Eberhart\cite{Kennedy95}, describe la variación de la velocidad y de la posición de las partículas como se presenta a continuación:
-\begin{align*}
-    v_{i,j}^{k+1} = v_{i,j}^{k} + c_{1}r_{1}(xbest_{i,j}^k - x_{i,j}^k) + c_{2}r_{2}(xgbest_{j}^{k} - x_{i,j}^k)\\
-    x_{i,j}^{k+1} = x_{i,j}^{k} + v_{i,j}^{k+1}
-\end{align*}    
+\begin{align}
+    v_{i,j}^{k+1} &= v_{i,j}^{k} + c_{1}r_{1}(xbest_{i,j}^k - x_{i,j}^k) + c_{2}r_{2}(xgbest_{j}^{k} - x_{i,j}^k)\\
+    &x_{i,j}^{k+1} = x_{i,j}^{k} + v_{i,j}^{k+1}
+\end{align}    
 Como se explica en Kaveh \cite{Psoexplain14} $x_{i,j}^{k}$ y $v_{i,j}^{k}$ son la $j$-ésima componente de la posición y la velocidad de la partícula $i$ respectivamente en la iteración o tiempo $k$, $r_{1}$ y $r_{2}$ son número aleatorios uniformes que varían de 0 a 1, $xbest_i$ y $xgbest$ representan las mejores soluciones alcanzadas por la partícula y por el enjambre respectivamente, $c_1$ y $c_2$ son parámetros que representan la confianza en la solución indiviual de la partícula (parámetro cognitivo) y la incidencia del aspecto colectivo o solución global (parámetro social), respectivamente. Un esquema de la interacción de estos componentes se aprecia en la figura \ref{fig:move_part}\\
 \begin{figure}[h!]
     \centering    
     \includegraphics[height=50mm]{figures/move_particle.png} 
     \caption{Movimiento de una partícula}
+    \vspace{-.25cm} 
+    \caption*{Creado por Kaveh\cite{Psoexplain14}.}
     \label{fig:move_part}
 \end{figure}
 A modo de equilibrar la incidencia de la velocidad previa de la partícula, se añade un factor que escala esta velocidad, dado que como se explica en Kaveh \cite{Psoexplain14}, si la velocidad previa se elimina, las partículas quedan atrapadas en una región local, pero si se le da demasiado peso, converge rápidamente a un óptimo conocido. Por esto, la forma del PSO base actual, tiene un parámetro $w$, que representa la incidencia de la velocidad previa (factor de inercia), por lo que ahora tenemos que la partícula se mueve acorde a: 
-\begin{align*}
+\begin{align}
     v_{i,j}^{k+1} = wv_{i,j}^{k} + c_{1}r_{1}(xbest_{i,j}^k - x_{i,j}^k) + c_{2}r_{2}(xgbest_{j}^{k} - x_{i,j}^k)\\
-\end{align*}    
-En el trabajo inicialmente citado, se puede ver una revisión completa del estado del arte del método \emph{Particle Swarm Optimization}, mostrando las distintas modificaciones y alternativas propuestas por la literatura que pretenden mejorar aspectos como la configuración de los parámetros (inercia, cognitivo, social, aleatorios), los problemas asociados a la convergencia prematura, topologías o estructuras del enjambre que modifican la comunicación entre partículas (o la incidencia de las soluciones globales y particulares), sesgos en la búsqueda por la forma de la región o por la interacción de las partículas (operadores de combinación como el promedio, que tienden a centrar la búsqueda en determinada región), algoritmos híbridos con PSO y la versión discreta de este método. 
+\end{align}    
+En el trabajo inicialmente citado, se puede ver una revisión completa del estado del arte del método \emph{Particle Swarm Optimization} en términos de diseño, mostrando las distintas modificaciones y alternativas propuestas por la literatura que pretenden mejorar aspectos como la configuración de los parámetros (inercia, cognitivo, social, aleatorios), los problemas asociados a la convergencia prematura, topologías o estructuras del enjambre que modifican la comunicación entre partículas (o la incidencia de las soluciones globales y particulares), sesgos en la búsqueda por la forma de la región o por la interacción de las partículas (operadores de combinación como el promedio, que tienden a centrar la búsqueda en determinada región), algoritmos híbridos con PSO y la versión discreta de este método. 
 \section{Velocidad del viento}
+\subsection{Distribución de Weibull}
+Dado un conjunto de datos de velocidad obtenidos de la medición del viento, se puede crear un histograma que represente la frecuencia de estos datos. A partir de esto, se puede generar un modelo probabilístico que explique el comportamiento de las velocidades del viento medido, ajustandose a los datos. Dicho modelo es comunmente representado por la distribución de Weibull, tal y como se menciona en el trabajo de Carneiro et al. \cite{Carneiro15} y Kongnam et al. \cite{Kongnam15}. En particular, en el estudio realizado por Carneiro et al., se describe la distribución de Weibull como: 
+ \begin{align}\label{eq:weibull}
+     f_{weibull}(v) = \frac{k}{c} \cdot (\frac{v}{c})^{k-1} \cdot e^{-(\frac{v}{c})^ k}
+ \end{align}
+ Donde $k$ y $c$ son los parámetros de ajuste que representan la forma y la escala de la distribución respectivamente, y $v$ es el valor de la velocidad del viento en cierta medición a la que el modelo asociará una determinada frecuencia. En la figura \ref{fig:weibull_fig}, se ven distintas curvas de Weibull, modificando el parámetro $k$, y manteniendo constante $c$.
+\begin{figure}[h!]
+    \centering    
+    \includegraphics[height=50mm]{figures/weibull_distribution.png} 
+    \caption{Función de distribución de probabilidad de Weibull}
+    \vspace{-.25cm} 
+    \caption*{Adaptación desde \cite{wikiWeibull}.}
+    \label{fig:weibull_fig}
+\end{figure}
+ \subsection{Métodos numéricos}
+ En el artículo de Chang \cite{Chang10}, se realiza una comparación de seis métodos numéricos comunmente utilizados para la estimación de los parámetros de Weibull, $k$ y $c$. A continuación, se describen estos métodos:
+ \begin{enumerate}
+     \item \textbf{The Moment}: Se basa en la iteración numérica de las siguientes dos equaciones, sea $\bar{v}$ el promedio y $\sigma$ la desviación estándar de la velocidad del viento:
+        \begin{align}
+            \bar{v} &= c\Gamma(1 + \frac{1}{k})\\
+            \sigma &= c[\Gamma(1 + \frac{2}{k}) - \Gamma^2(1 + \frac{1}{k})]^{\frac{1}{2}}
+        \end{align}    
+    \item \textbf{Empirical}: Considerado un caso especial del método del momento. Los parámetros son calculados de la forma: 
+        \begin{align}
+            k &= (\frac{\sigma}{\bar{v}})^{-1.086}\\
+            c &= \frac{\bar{v}}{\Gamma(1 + \frac{1}{k})}
+        \end{align}    
+    \item \textbf{Graphical}: Se ajustan rectas a los datos de velocidad del viento usando mínimos cuadrados. Con una doble transformación logaritmica, la función de distribución acumulativa queda:
+        \begin{align}
+            \ln\{-\ln[1- F(v)]\} = k\ln(v) - k\ln(c)
+        \end{align}    
+         Graficando $ln(v)$ en vez de $ln(-ln(1-F(v)))$, la pendiente de la recta que se ajusta mejor a los pares de datos es el parámetro de la forma de la distribución de Weibull. El parámetro de escala se obtiene por la intercepción con la coordenada $y$.  
+    \item \textbf{Maximum likelihood}: En este métodos, son necesarias muchas iteraciones. Los parámetros de Weibull están dado por:
+        \begin{align}
+            k &= [\frac{\sum_{i=1}^n v_i^k \ln(v_i)}{\sum_{i=1}^n v_i^k} - \frac{\sum_{i=1}^n \ln(v_i)}{n}]^(-1)\\
+            c &= (\frac{1}{n}\sum_{i=1}^n v_i^k)^{\frac{1}{k}}
+        \end{align}    
+         Donde $v_i$ es la velocidad del viento en el paso $i$ y $n$ es el número de puntos de datos distintos de cero. 
+    \item \textbf{Modified maximum likelihood}: Este método es utilizado si es que se tiene disponible los datos de velocidad del viento en una distribución de frequencias. Los parámetros de Weibull son calculados como:
+        \begin{align}
+            k &= [\frac{\sum_{i=1}^n v_i^k \ln(v_i)f(v_i)}{\sum_{i=1}^n v_i^kf(v_I)} - \frac{\sum_{i=1}^n\ln(v_i)f(v_i)}{f(v \geq 0)}]^{-1}\\
+            c &= [\frac{1}{f(v \geq 0)}\sum_{i=1}^n v_i^{k}f(v_i)]^{1/k}
+        \end{align}
+         Donde $v_i$ es la velocidad del viento central al intervalo $i$, $n$ es el número de intervalos. $f(v_i)$ es la frecuencia de la velocidad del viento dentro del intervalo $i$ y $f(v \geq 0)$ la probabilidad de que la velocidad del viento sea mayor o igual a cero.
+    \item \textbf{Energy pattern factor method}: El factor del patron de energía es definido como:
+        \begin{align}
+            E_{pf} = \frac{\bar{v^3}}{\bar{v}^3}
+        \end{align}   
+         Donde $\bar{v^3}$ es el promedio de las velocidades del viento cúbicas. Los parámetros de Weibull pueden ser calculados como:
+        \begin{align}
+            k &= 1 + \frac{3.69}{E_{pf}^2}\\
+            c &= \frac{\bar{v}}{\Gamma(1 + \frac{1}{k})}
+        \end{align}    
+ \end{enumerate}     
+ Estos métodos son comparados a través de pruebas de desempeño con una simulación de Monte Carlo para este caso y el análisis de los datos del viento con criterios tales como el test Kolmogorov-Smirnov, \emph{parameter error}, \emph{root mean square error} y el error de energía del viento. De ello, bajo distintas condiciones ciertos métodos se comportan mejor que otros ajustando la distribución de Weibull a los datos de prueba. Sin embargo, como se ve a continuación, una propuesta realizada para mejorar el ajuste a través del uso de la meta-heurística \emph{Particle Swarm Optimization}, mejora el desempeño versus estos métodos numéricos presentados.  
+ \subsection{Particle Swarm Optimization}
+ En Carneiro et al. \cite{Carneiro15}, se realiza un caso de estudio de las características del viento en las zonas costeras de Parnaiba y Maracanaú, y en una zona interior, Petrolina, en Brasil. Allí se explica la necesidad de obtener un modelo para el comportamiento estocástico del viento, de manera de poder evaluar el potencial energético de aquellas regiones. Como se menciona anteriormente, el modelo utilizado es la distribución de Weibull. Sin embargo, es preciso ajustar el modelo a los datos recolectados, por ellos, en el estudio mencionado, se propone un PSO para encontrar los parámetros $k$ y $c$ de la distribución de Weibull. Así, la función objetivo que guía las partículas del enjambre se define como:
+\begin{align}
+    \epsilon(v_i) = \frac{1}{2}\sum_{i=0}^{n}(f_{real}(v_i) - f_{weibull}(v_i))^2
+\end{align}
+Donde $\epsilon$, es el error cuadrático a minimizar entre los valores del histograma de datos y la función de distribución de Weibull.\\
+El PSO utilizado es el modelo clásico presentado en la sección anterior, considerando los parámetros $w, c1$ y $c2$, sin embargo, para abolir la convergencia prematura, se establece que estos parámetros varíen durante la ejecución del algoritmo dentro de un rango definido ($w \in \{0.4, 0.9\}, c1$ y $c2 \in \{0, 2.5\}$).\\
+Finalmente, para evaluar los resultados de la propuesta, se compara con el PSO, cinco métodos numéricos utilizados para la estimación de los parámetros de Weibull: \emph{Moment Method} (M), \emph{Energy Method} (E), \emph{Energy Pattern Factor Method} (EPF), \emph{Energy Equivalent Method} (EE) y \emph{Maximum Likelihood} (ML). Además, para evaluar la eficiencia de los métodos, se utilizan tres \emph{test} estadísticos: \emph{correlation} (r), \emph{relative bias} (RB) y \emph{root mean square error} (RMSE).\\
+Los resultados son alentadores, demostrando que el PSO obtiene los mejores resultados de ajuste a los datos, como ejemplo, la figura \ref{fig:pso_fit}.
+\begin{figure}[h!]
+    \centering    
+    \includegraphics[height=50mm]{figures/pso_fit.png} 
+    \caption{Distribución de Weibull con histograma - Maracanaú}
+    \vspace{-.25cm} 
+    \caption*{Creado por Carneiro et al.\cite{Carneiro15}.}
+    \label{fig:pso_fit}
+\end{figure}
+En Kongnam et al. \cite{Kongnam15}, PSO es utilizado para el problema del control de la velocidad de las turbinas de viento para maximizar la generación de energía. En este trabajo, se utiliza la distribución de Weibull para el modelado de la velocidad del viento, y la construcción del PSO es llevada a cabo considerando el problema de los parámetros fijo, por lo que se desarrollan funciones que varian estos parámetros a lo largo de la ejecución.\\
 \section{Dirección del viento}
+La dirección del viento es información escencial para la investigación de energía eólica, dado que con ella se puede ubicar de forma eficiente las turbinas que capturan la energía. En el resumen acerca de las energías renovables y sustentables\cite{Winddirelse15}, se explica que para identificar la dirección dominante del viento la función de densidad \emph{finite von Mises-Fisher} (FVMF) es utilizada para ajustarse a datos delviento obtenidos en cinco estaciones de la península de Malasia. La FVMF está dada por:
+\begin{align}
+    f(x;\mu_{h}, k_{h}) = \sum_{h=1}^{H}(w_{h})\frac{k^{\frac{d}{2} - 1}}{(2\pi)^{\frac{d}{2}}I_{\frac{d}{2} - 1} (k)}e^{(k_h\mu_{h}^{T}x)}
+\end{align}    
+Donde $x=[cos(\theta_i), sin(\theta_i)]$, $\frac{k^{\frac{d}{2} - 1}}{(2\pi)^{\frac{d}{2}}I_{\frac{d}{2} - 1} (k)}$ es una constante de normalización, $d$ es la dimensión del vector random $x$ ($d = 2$, para este caso), $\mu_{h}$ y $k_h$ son el promedio direccional, parámetro de concentración para cada $h = 1, 2,...,H$ componente del FVFM y $w_h$ es el parámetro de mezcla (\emph{mixture parameter}).\\
+Además, el parámetro de mezcla del FVMF está sujeto a la siguiente restricción:
+\begin{align}
+    0 \leq w_h \leq 1 & \sum_{h=1}^{H} w_{h} = 1 para (h=1,2,...,H) 
+\end{align}
+Para estimar los parámetros del FVMF, se sugiere utilzar el método \emph{expectation maximization}, debido a que los métodos regulares son incapaces de manejar la complejidad del modelo, consideraciones que se mencionan en el trabajo de Banerjee et al.\cite{Banerjee05}.\\
+Finalmente, los resultados de este trabajo muestran que FVMF provee un razonable ajuste a diferentes conjunto de datos, obteniendo un modelo que explica más del $90\%$ de la variación de los datos, en este caso, obtenidos de estaciones ubicadas en la península de Malasia. En la figura \ref{fig:wind_dir_vonMises} se aprecia el ajuste del modelo a los datos, tanto la comparación con el histograma, como en su versión circular.\\
+\begin{figure}[h!]
+    \centering    
+    \includegraphics[height=100mm]{figures/wind_dir_vonMises.png} 
+    \caption{Modelo de ajuste FVMV para suroeste y noreste en la estación Mersing}
+    \vspace{-.25cm} 
+    \caption*{Creado por \cite{Winddirelse15}.}
+    \label{fig:wind_dir_vonMises}
+\end{figure}
+
+En el trabajo de Heckenbergerova et al.\cite{Heckenbergerova15}, se utiliza una estratégia diferente a la enteriormente mencionada. Basado en una meta-heurística inspirada en la biología, \emph{Particle Swarm Optimization}, proponen una forma distinta para encontrar un modelo de ajuste, utilizando la distribución estadística \emph{finite mixture of circular normal von Mises} (MvM).\\ 
+En este caso, se presenta el modelo de la siguiente forma: se define la distribución simple de \emph{von Mises} (SvM):
+\begin{align}
+    f(\theta; \mu, k) = \frac{1}{2{\pi}I_{0}(k)}e^{k cos(\theta - \mu)}
+\end{align}    
+Donde $k \geq 0$, $0 \leq \mu \leq 2\pi$, $0 \leq \theta \leq 2\pi$ y $I_0(k)$ representa la versión modificada de la función de Bessel de primera clase y orden cero:
+\begin{align}
+    I_0(k) = \frac{1}{\sqrt{2\pi}}\int_0^{2\pi} e^{k cos(\theta)} d\theta = \sum_{k=0}^{\infty} \frac{1}{(k!)^2}(\frac{k}{2})^{2k}
+\end{align}    
+Para $k=0$, la distribución SvM se vuelve uniforme alrededor de un círculo con todas las direcciones equiprobables. Cuando una colección de datos tiene más de una dirección predominante, es necesario utilizar una mezcla (\emph{mixture}) de distribuciones.
+Así, la función de densidad de probabilidad \emph{finite mixture of simple von Mises} (MvM-pdf) queda como:
+\begin{align}
+    \phi(\theta; v) = \sum_{j=1}^{k} w_j \cdot f_j(\theta; \mu_j, k_j)
+\end{align}    
+Donde $k$ es el número de funciones de la mezcla, $j$ es el índice de una particular SvM-pdf con parámetros $\mu_j$ y $k_j$, $\theta$ es una variable angular ($0 \leq \theta \leq 2\pi$), y $v$ es un vector parámetro de la forma:
+ \begin{align}\label{eq:sol_pso}
+    v = (\mu, k, w) = (\mu_1, ..., \mu_k,k_1,...,k_k,w_1,...,w_k)
+\end{align}
+Por tanto, se obtiene en primer lugar una aproximación numérica de los parámetros del MvM a partir de los datos, estratégia nombrada como estimación análitica en el trabajo de Heckenbergerova et al., para luego optimizarlos mediante el uso de un PSO, modificado para evitar la convergencia prematura, en donde la solución está representada por una copdificación del vector $v$ mencionado anteriormente\ref{eq:sol_pso}.\\ 
+Como test estadístico, es utilizado el \emph{Pearson's chi-squared goodness-off-fit}. Finalmente, los resultados muestran la mejora que se logra a la estimación inicial, logrando además un buen ajuste a los datos, comparandose incluso con algoritmos genéticos. Los resultados obtenidos para los datos recolectados en el aeropuerto de St John localizado en Newfoundland, Canadá, son apreciables en la figura \ref{fig:dir_pso}.
+\begin{figure}[h!]
+    \centering    
+    \includegraphics[height=50mm]{figures/dir_pso.png} 
+    \caption{Ajuste dirección del viento, aeropuerto St. John}
+    \vspace{-.25cm} 
+    \caption*{Creado por Heckenbergerova et al.\cite{Heckenbergerova15}.}
+    \label{fig:dir_pso}
+\end{figure}
+
