--- a/doc/memoria.tex
+++ b/doc/memoria.tex
@@ -60,7 +60,7 @@
 \begin{spacing}{1}
 \tableofcontents \chaptermark{Tabla de contenidos}
 \listoffigures
-\listoftables
+%\listoftables
 \end{spacing}
 
 \mainmatter
